pandas-challenge almost
Full calculations, just need analysis

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,14 +183,14 @@
        "15"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total number of unique schools\n",
-    "school_count = school_data_complete[\"school_name\"].nunique()\n",
+    "school_count = \n",
     "school_count"
    ]
   },
@@ -212,7 +212,7 @@
    ],
    "source": [
     "# Calculate the total number of students\n",
-    "student_count = school_data_complete[\"student_name\"].value_counts()\n",
+    "student_count = \n",
     "student_count"
    ]
   },
